--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
   --max-width: 1000px;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
   overflow-y: overlay;
